correction gap

--- a/style2.css
+++ b/style2.css
@@ -58,7 +58,7 @@ h3 {
 #menubis
 {
     display:flex;
-    gap:40px;
+    gap:10px;
 }
 
 .descriptionmenu {
